// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Alert Dismissing 1`] = `
<div>
  <div
    className="Component-alertDismissible-0-1-124 show"
    role="alert"
  >
    <strong>
      alertPrimary
    </strong>
     You should check in on some of those fields below.
    <button
      aria-label="Close"
      className="Component-close-0-1-125"
      data-dismiss="alert"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <div
    className="Component-alertDismissible-0-1-129 show"
    role="alert"
  >
    <strong>
      alertSecondary
    </strong>
     You should check in on some of those fields below.
    <button
      aria-label="Close"
      className="Component-close-0-1-130"
      data-dismiss="alert"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <div
    className="Component-alertDismissible-0-1-134 show"
    role="alert"
  >
    <strong>
      alertSuccess
    </strong>
     You should check in on some of those fields below.
    <button
      aria-label="Close"
      className="Component-close-0-1-135"
      data-dismiss="alert"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <div
    className="Component-alertDismissible-0-1-139 show"
    role="alert"
  >
    <strong>
      alertInfo
    </strong>
     You should check in on some of those fields below.
    <button
      aria-label="Close"
      className="Component-close-0-1-140"
      data-dismiss="alert"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <div
    className="Component-alertDismissible-0-1-144 show"
    role="alert"
  >
    <strong>
      alertWarning
    </strong>
     You should check in on some of those fields below.
    <button
      aria-label="Close"
      className="Component-close-0-1-145"
      data-dismiss="alert"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <div
    className="Component-alertDismissible-0-1-149 show"
    role="alert"
  >
    <strong>
      alertDanger
    </strong>
     You should check in on some of those fields below.
    <button
      aria-label="Close"
      className="Component-close-0-1-150"
      data-dismiss="alert"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <div
    className="Component-alertDismissible-0-1-154 show"
    role="alert"
  >
    <strong>
      alertLight
    </strong>
     You should check in on some of those fields below.
    <button
      aria-label="Close"
      className="Component-close-0-1-155"
      data-dismiss="alert"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <div
    className="Component-alertDismissible-0-1-159 show"
    role="alert"
  >
    <strong>
      alertDark
    </strong>
     You should check in on some of those fields below.
    <button
      aria-label="Close"
      className="Component-close-0-1-160"
      data-dismiss="alert"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Alert Theme colors 1`] = `
<div>
  <div
    className="Component-alert-0-1-1"
  >
    <h1
      className="Component-alertHeading-0-1-8"
    >
      alertPrimary
    </h1>
    This is a 
    primary
     
    <a
      className="Component-alertLink-0-1-12"
      href="/"
    >
      alert
    </a>
     — check it out!
  </div>
  <div
    className="Component-alert-0-1-16"
  >
    <h1
      className="Component-alertHeading-0-1-23"
    >
      alertSecondary
    </h1>
    This is a 
    secondary
     
    <a
      className="Component-alertLink-0-1-27"
      href="/"
    >
      alert
    </a>
     — check it out!
  </div>
  <div
    className="Component-alert-0-1-31"
  >
    <h1
      className="Component-alertHeading-0-1-38"
    >
      alertSuccess
    </h1>
    This is a 
    success
     
    <a
      className="Component-alertLink-0-1-42"
      href="/"
    >
      alert
    </a>
     — check it out!
  </div>
  <div
    className="Component-alert-0-1-46"
  >
    <h1
      className="Component-alertHeading-0-1-53"
    >
      alertInfo
    </h1>
    This is a 
    info
     
    <a
      className="Component-alertLink-0-1-57"
      href="/"
    >
      alert
    </a>
     — check it out!
  </div>
  <div
    className="Component-alert-0-1-61"
  >
    <h1
      className="Component-alertHeading-0-1-68"
    >
      alertWarning
    </h1>
    This is a 
    warning
     
    <a
      className="Component-alertLink-0-1-72"
      href="/"
    >
      alert
    </a>
     — check it out!
  </div>
  <div
    className="Component-alert-0-1-76"
  >
    <h1
      className="Component-alertHeading-0-1-83"
    >
      alertDanger
    </h1>
    This is a 
    danger
     
    <a
      className="Component-alertLink-0-1-87"
      href="/"
    >
      alert
    </a>
     — check it out!
  </div>
  <div
    className="Component-alert-0-1-91"
  >
    <h1
      className="Component-alertHeading-0-1-98"
    >
      alertLight
    </h1>
    This is a 
    light
     
    <a
      className="Component-alertLink-0-1-102"
      href="/"
    >
      alert
    </a>
     — check it out!
  </div>
  <div
    className="Component-alert-0-1-106"
  >
    <h1
      className="Component-alertHeading-0-1-113"
    >
      alertDark
    </h1>
    This is a 
    dark
     
    <a
      className="Component-alertLink-0-1-117"
      href="/"
    >
      alert
    </a>
     — check it out!
  </div>
</div>
`;

exports[`Storyshots Badge Badge in button 1`] = `
<div>
  <button
    className="Component-container-0-1-169"
    type="button"
  >
    Notifications 
    <span
      className="Component-button-0-1-170"
    >
      4
    </span>
  </button>
  <button
    className="Component-container-0-1-171"
    type="button"
  >
    Notifications 
    <span
      className="Component-button-0-1-172"
    >
      4
    </span>
  </button>
  <button
    className="Component-container-0-1-173"
    type="button"
  >
    Notifications 
    <span
      className="Component-button-0-1-174"
    >
      4
    </span>
  </button>
  <button
    className="Component-container-0-1-175"
    type="button"
  >
    Notifications 
    <span
      className="Component-button-0-1-176"
    >
      4
    </span>
  </button>
  <button
    className="Component-container-0-1-177"
    type="button"
  >
    Notifications 
    <span
      className="Component-button-0-1-178"
    >
      4
    </span>
  </button>
  <button
    className="Component-container-0-1-179"
    type="button"
  >
    Notifications 
    <span
      className="Component-button-0-1-180"
    >
      4
    </span>
  </button>
  <button
    className="Component-container-0-1-181"
    type="button"
  >
    Notifications 
    <span
      className="Component-button-0-1-182"
    >
      4
    </span>
  </button>
  <button
    className="Component-container-0-1-183"
    type="button"
  >
    Notifications 
    <span
      className="Component-button-0-1-184"
    >
      4
    </span>
  </button>
</div>
`;

exports[`Storyshots Badge Badge in header 1`] = `
<div>
  <div>
    <div>
      <h1>
        Example heading 
        <span
          className="Component-badge-0-1-161"
        >
          123
        </span>
      </h1>
      <h2>
        Example heading 
        <span
          className="Component-badge-0-1-161"
        >
          123
        </span>
      </h2>
      <h3>
        Example heading 
        <span
          className="Component-badge-0-1-161"
        >
          123
        </span>
      </h3>
      <h4>
        Example heading 
        <span
          className="Component-badge-0-1-161"
        >
          123
        </span>
      </h4>
      <h5>
        Example heading 
        <span
          className="Component-badge-0-1-161"
        >
          123
        </span>
      </h5>
      <h6>
        Example heading 
        <span
          className="Component-badge-0-1-161"
        >
          123
        </span>
      </h6>
    </div>
  </div>
  <div>
    <div>
      <h1>
        Example heading 
        <span
          className="Component-badge-0-1-162"
        >
          123
        </span>
      </h1>
      <h2>
        Example heading 
        <span
          className="Component-badge-0-1-162"
        >
          123
        </span>
      </h2>
      <h3>
        Example heading 
        <span
          className="Component-badge-0-1-162"
        >
          123
        </span>
      </h3>
      <h4>
        Example heading 
        <span
          className="Component-badge-0-1-162"
        >
          123
        </span>
      </h4>
      <h5>
        Example heading 
        <span
          className="Component-badge-0-1-162"
        >
          123
        </span>
      </h5>
      <h6>
        Example heading 
        <span
          className="Component-badge-0-1-162"
        >
          123
        </span>
      </h6>
    </div>
  </div>
  <div>
    <div>
      <h1>
        Example heading 
        <span
          className="Component-badge-0-1-163"
        >
          123
        </span>
      </h1>
      <h2>
        Example heading 
        <span
          className="Component-badge-0-1-163"
        >
          123
        </span>
      </h2>
      <h3>
        Example heading 
        <span
          className="Component-badge-0-1-163"
        >
          123
        </span>
      </h3>
      <h4>
        Example heading 
        <span
          className="Component-badge-0-1-163"
        >
          123
        </span>
      </h4>
      <h5>
        Example heading 
        <span
          className="Component-badge-0-1-163"
        >
          123
        </span>
      </h5>
      <h6>
        Example heading 
        <span
          className="Component-badge-0-1-163"
        >
          123
        </span>
      </h6>
    </div>
  </div>
  <div>
    <div>
      <h1>
        Example heading 
        <span
          className="Component-badge-0-1-164"
        >
          123
        </span>
      </h1>
      <h2>
        Example heading 
        <span
          className="Component-badge-0-1-164"
        >
          123
        </span>
      </h2>
      <h3>
        Example heading 
        <span
          className="Component-badge-0-1-164"
        >
          123
        </span>
      </h3>
      <h4>
        Example heading 
        <span
          className="Component-badge-0-1-164"
        >
          123
        </span>
      </h4>
      <h5>
        Example heading 
        <span
          className="Component-badge-0-1-164"
        >
          123
        </span>
      </h5>
      <h6>
        Example heading 
        <span
          className="Component-badge-0-1-164"
        >
          123
        </span>
      </h6>
    </div>
  </div>
  <div>
    <div>
      <h1>
        Example heading 
        <span
          className="Component-badge-0-1-165"
        >
          123
        </span>
      </h1>
      <h2>
        Example heading 
        <span
          className="Component-badge-0-1-165"
        >
          123
        </span>
      </h2>
      <h3>
        Example heading 
        <span
          className="Component-badge-0-1-165"
        >
          123
        </span>
      </h3>
      <h4>
        Example heading 
        <span
          className="Component-badge-0-1-165"
        >
          123
        </span>
      </h4>
      <h5>
        Example heading 
        <span
          className="Component-badge-0-1-165"
        >
          123
        </span>
      </h5>
      <h6>
        Example heading 
        <span
          className="Component-badge-0-1-165"
        >
          123
        </span>
      </h6>
    </div>
  </div>
  <div>
    <div>
      <h1>
        Example heading 
        <span
          className="Component-badge-0-1-166"
        >
          123
        </span>
      </h1>
      <h2>
        Example heading 
        <span
          className="Component-badge-0-1-166"
        >
          123
        </span>
      </h2>
      <h3>
        Example heading 
        <span
          className="Component-badge-0-1-166"
        >
          123
        </span>
      </h3>
      <h4>
        Example heading 
        <span
          className="Component-badge-0-1-166"
        >
          123
        </span>
      </h4>
      <h5>
        Example heading 
        <span
          className="Component-badge-0-1-166"
        >
          123
        </span>
      </h5>
      <h6>
        Example heading 
        <span
          className="Component-badge-0-1-166"
        >
          123
        </span>
      </h6>
    </div>
  </div>
  <div>
    <div>
      <h1>
        Example heading 
        <span
          className="Component-badge-0-1-167"
        >
          123
        </span>
      </h1>
      <h2>
        Example heading 
        <span
          className="Component-badge-0-1-167"
        >
          123
        </span>
      </h2>
      <h3>
        Example heading 
        <span
          className="Component-badge-0-1-167"
        >
          123
        </span>
      </h3>
      <h4>
        Example heading 
        <span
          className="Component-badge-0-1-167"
        >
          123
        </span>
      </h4>
      <h5>
        Example heading 
        <span
          className="Component-badge-0-1-167"
        >
          123
        </span>
      </h5>
      <h6>
        Example heading 
        <span
          className="Component-badge-0-1-167"
        >
          123
        </span>
      </h6>
    </div>
  </div>
  <div>
    <div>
      <h1>
        Example heading 
        <span
          className="Component-badge-0-1-168"
        >
          123
        </span>
      </h1>
      <h2>
        Example heading 
        <span
          className="Component-badge-0-1-168"
        >
          123
        </span>
      </h2>
      <h3>
        Example heading 
        <span
          className="Component-badge-0-1-168"
        >
          123
        </span>
      </h3>
      <h4>
        Example heading 
        <span
          className="Component-badge-0-1-168"
        >
          123
        </span>
      </h4>
      <h5>
        Example heading 
        <span
          className="Component-badge-0-1-168"
        >
          123
        </span>
      </h5>
      <h6>
        Example heading 
        <span
          className="Component-badge-0-1-168"
        >
          123
        </span>
      </h6>
    </div>
  </div>
</div>
`;

exports[`Storyshots Badge Link badges 1`] = `
<div>
  <a
    className="Component-btnInsideLink-0-1-201"
    href="#"
  >
    badgePrimary
  </a>
  <a
    className="Component-btnInsideLink-0-1-202"
    href="#"
  >
    badgeSecondary
  </a>
  <a
    className="Component-btnInsideLink-0-1-203"
    href="#"
  >
    badgeSuccess
  </a>
  <a
    className="Component-btnInsideLink-0-1-204"
    href="#"
  >
    badgeInfo
  </a>
  <a
    className="Component-btnInsideLink-0-1-205"
    href="#"
  >
    badgeWarning
  </a>
  <a
    className="Component-btnInsideLink-0-1-206"
    href="#"
  >
    badgeDanger
  </a>
  <a
    className="Component-btnInsideLink-0-1-207"
    href="#"
  >
    badgeLight
  </a>
  <a
    className="Component-btnInsideLink-0-1-208"
    href="#"
  >
    badgeDark
  </a>
</div>
`;

exports[`Storyshots Badge Pill badges 1`] = `
<div>
  <span
    className="Component-badgePill-0-1-193"
  >
    badgePrimary
  </span>
  <span
    className="Component-badgePill-0-1-194"
  >
    badgeSecondary
  </span>
  <span
    className="Component-badgePill-0-1-195"
  >
    badgeSuccess
  </span>
  <span
    className="Component-badgePill-0-1-196"
  >
    badgeInfo
  </span>
  <span
    className="Component-badgePill-0-1-197"
  >
    badgeWarning
  </span>
  <span
    className="Component-badgePill-0-1-198"
  >
    badgeDanger
  </span>
  <span
    className="Component-badgePill-0-1-199"
  >
    badgeLight
  </span>
  <span
    className="Component-badgePill-0-1-200"
  >
    badgeDark
  </span>
</div>
`;

exports[`Storyshots Badge Span badges 1`] = `
<div>
  <span
    className="Component-badge-0-1-185"
  >
    badgePrimary
  </span>
  <span
    className="Component-badge-0-1-186"
  >
    badgeSecondary
  </span>
  <span
    className="Component-badge-0-1-187"
  >
    badgeSuccess
  </span>
  <span
    className="Component-badge-0-1-188"
  >
    badgeInfo
  </span>
  <span
    className="Component-badge-0-1-189"
  >
    badgeWarning
  </span>
  <span
    className="Component-badge-0-1-190"
  >
    badgeDanger
  </span>
  <span
    className="Component-badge-0-1-191"
  >
    badgeLight
  </span>
  <span
    className="Component-badge-0-1-192"
  >
    badgeDark
  </span>
</div>
`;

exports[`Storyshots Breadcrumb breadcrumb 1`] = `
<div>
  <nav>
    <ol
      className="Component-breadcrumb-0-1-209"
    >
      <li
        className="Component-breadcrumbItem-0-1-210"
      >
        Home
      </li>
    </ol>
  </nav>
  <nav>
    <ol
      className="Component-breadcrumb-0-1-209"
    >
      <li
        className="Component-breadcrumbItem-0-1-210"
      >
        <a
          href="#"
        >
          Home
        </a>
      </li>
      <li
        className="Component-breadcrumbItem-0-1-210"
      >
        Library
      </li>
    </ol>
  </nav>
  <nav>
    <ol
      className="Component-breadcrumb-0-1-209"
    >
      <li
        className="Component-breadcrumbItem-0-1-210"
      >
        <a
          href="#"
        >
          Home
        </a>
      </li>
      <li
        className="Component-breadcrumbItem-0-1-210"
      >
        <a
          href="#"
        >
          Library
        </a>
      </li>
      <li
        className="Component-breadcrumbItem-0-1-210"
      >
        Data
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Storyshots Button Groups Basic example 1`] = `
<div
  className="Component-btnGroup-0-1-227"
>
  <button
    className="Component-btnLeft-0-1-230"
    type="button"
  >
    Left
  </button>
  <button
    className="Component-btnMiddle-0-1-231"
    type="button"
  >
    Middle
  </button>
  <button
    className="Component-btnRight-0-1-232"
    type="button"
  >
    Right
  </button>
</div>
`;

exports[`Storyshots Button Groups Button Toolbar 1`] = `
<div
  className="Component-btnToolbar-0-1-237"
>
  <div
    className="Component-btnGroup-0-1-236"
  >
    <button
      className="Component-btn-0-1-238"
      type="button"
    >
      1
    </button>
    <button
      className="Component-btn-0-1-238"
      type="button"
    >
      2
    </button>
    <button
      className="Component-btn-0-1-238"
      type="button"
    >
      3
    </button>
    <button
      className="Component-btn-0-1-238"
      type="button"
    >
      4
    </button>
  </div>
  <div
    className="Component-btnGroup-0-1-236"
  >
    <button
      className="Component-btn-0-1-238"
      type="button"
    >
      5
    </button>
    <button
      className="Component-btn-0-1-238"
      type="button"
    >
      6
    </button>
    <button
      className="Component-btn-0-1-238"
      type="button"
    >
      7
    </button>
  </div>
  <div
    className="Component-btnGroup-0-1-236"
  >
    <button
      className="Component-btn-0-1-238"
      type="button"
    >
      8
    </button>
  </div>
</div>
`;

exports[`Storyshots Button Groups Nesting 1`] = `
<div
  className="Component-btnGroup-0-1-245"
>
  <button
    className="Component-btn-0-1-247"
    type="button"
  >
    1
  </button>
  <button
    className="Component-btn-0-1-247"
    type="button"
  >
    2
  </button>
  <div
    className="Component-btnGroup-0-1-245"
    role="group"
  >
    <button
      className="Component-btnDropdownToggle-0-1-251"
      type="button"
    >
      Dropdown
    </button>
    <div
      className="Component-dropdownMenu-0-1-253"
    >
      <a
        className="Component-dropdownItem-0-1-252"
        href="#"
      >
        Dropdown link
      </a>
      <a
        className="Component-dropdownItem-0-1-252"
        href="#"
      >
        Dropdown link
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Buttons Outline Buttons 1`] = `
<div>
  <button
    className="Component-btn-0-1-219"
    type="button"
  >
    btnOutlinePrimary
  </button>
  <button
    className="Component-btn-0-1-220"
    type="button"
  >
    btnOutlineSecondary
  </button>
  <button
    className="Component-btn-0-1-221"
    type="button"
  >
    btnOutlineSuccess
  </button>
  <button
    className="Component-btn-0-1-222"
    type="button"
  >
    btnOutlineInfo
  </button>
  <button
    className="Component-btn-0-1-223"
    type="button"
  >
    btnOutlineWarning
  </button>
  <button
    className="Component-btn-0-1-224"
    type="button"
  >
    btnOutlineDanger
  </button>
  <button
    className="Component-btn-0-1-225"
    type="button"
  >
    btnOutlineLight
  </button>
  <button
    className="Component-btn-0-1-226"
    type="button"
  >
    btnOutlineDark
  </button>
</div>
`;

exports[`Storyshots Buttons Simple Buttons 1`] = `
<div>
  <button
    className="Component-btn-0-1-211"
    type="button"
  >
    btnPrimary
  </button>
  <button
    className="Component-btn-0-1-212"
    type="button"
  >
    btnSecondary
  </button>
  <button
    className="Component-btn-0-1-213"
    type="button"
  >
    btnSuccess
  </button>
  <button
    className="Component-btn-0-1-214"
    type="button"
  >
    btnInfo
  </button>
  <button
    className="Component-btn-0-1-215"
    type="button"
  >
    btnWarning
  </button>
  <button
    className="Component-btn-0-1-216"
    type="button"
  >
    btnDanger
  </button>
  <button
    className="Component-btn-0-1-217"
    type="button"
  >
    btnLight
  </button>
  <button
    className="Component-btn-0-1-218"
    type="button"
  >
    btnDark
  </button>
</div>
`;

exports[`Storyshots Reboot Reboot elements 1`] = `
<div>
  <div>
    <h1>
      Heading 1
    </h1>
    <h2>
      Heading 2
    </h2>
    <h3>
      Heading 3
    </h3>
    <h4>
      Heading 4
    </h4>
    <h5>
      Heading 5
    </h5>
    <h6>
      Heading 6
    </h6>
    <section>
      <h1>
        Heading 1 (in section)
      </h1>
      <h2>
        Heading 2 (in section)
      </h2>
      <h3>
        Heading 3 (in section)
      </h3>
      <h4>
        Heading 4 (in section)
      </h4>
      <h5>
        Heading 5 (in section)
      </h5>
      <h6>
        Heading 6 (in section)
      </h6>
    </section>
    <article>
      <h1>
        Heading 1 (in article)
      </h1>
      <h2>
        Heading 2 (in article)
      </h2>
      <h3>
        Heading 3 (in article)
      </h3>
      <h4>
        Heading 4 (in article)
      </h4>
      <h5>
        Heading 5 (in article)
      </h5>
      <h6>
        Heading 6 (in article)
      </h6>
    </article>
    <header>
      <hgroup>
        <h1>
          Heading 1 (in hgroup)
        </h1>
        <h2>
          Heading 2 (in hgroup)
        </h2>
      </hgroup>
      <nav>
        <ul>
          <li>
            <a
              href="#"
            >
              navigation item #1
            </a>
          </li>
          <li>
            <a
              href="#"
            >
              navigation item #2
            </a>
          </li>
          <li>
            <a
              href="#"
            >
              navigation item #3
            </a>
          </li>
        </ul>
      </nav>
    </header>
  </div>
  <div>
    <h1>
      Text-level semantics
    </h1>
    <p
      hidden={true}
    >
      This should be hidden in all browsers, apart from IE6
    </p>
    <p>
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et m. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et m. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et m.
    </p>
    <p>
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et m. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et m. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et m.
    </p>
    <address>
      Address: somewhere, world
    </address>
    <hr />
    <hr />
    <p>
      The 
      <a
        href="#"
      >
        a element
      </a>
       example
      <br />
      The 
      <abbr>
        abbr element
      </abbr>
       and 
      <abbr
        title="Title text"
      >
        abbr element with title
      </abbr>
       examples
      <br />
      The 
      <b>
        b element
      </b>
       example
      <br />
      The 
      <cite>
        cite element
      </cite>
       example
      <br />
      The 
      <code>
        code element
      </code>
       example
      <br />
      The 
      <del>
        del element
      </del>
       example
      <br />
      The 
      <dfn>
        dfn element
      </dfn>
       and 
      <dfn
        title="Title text"
      >
        dfn element with title
      </dfn>
       examples
      <br />
      The 
      <em>
        em element
      </em>
       example
      <br />
      The 
      <i>
        i element
      </i>
       example
      <br />
      The img element 
      <img
        alt=""
        src="./16_16.img"
      />
       example
      <br />
      The 
      <ins>
        ins element
      </ins>
       example
      <br />
      The 
      <kbd>
        kbd element
      </kbd>
       example
      <br />
      The 
      <mark>
        mark element
      </mark>
       example
      <br />
      The 
      <q>
        q element 
        <q>
          inside
        </q>
         a q element
      </q>
       example
      <br />
      The 
      <s>
        s element
      </s>
       example
      <br />
      The 
      <samp>
        samp element
      </samp>
       example
      <br />
      The 
      <small>
        small element
      </small>
       example
      <br />
      The 
      <span>
        span element
      </span>
       example
      <br />
      The 
      <strong>
        strong element
      </strong>
       example
      <br />
      The 
      <sub>
        sub element
      </sub>
       example
      <br />
      The 
      <sup>
        sup element
      </sup>
       example
      <br />
      The 
      <u>
        u element
      </u>
       example
      <br />
      The 
      <var>
        var element
      </var>
       example
    </p>
  </div>
  <div>
    <h1>
      Embedded content
    </h1>
    <h3>
      audio
    </h3>
    <audio
      controls={true}
    />
    <audio />
    <h3>
      img
    </h3>
    <img
      alt=""
      src="./100_100.img"
    />
    <a
      href="#"
    >
      <img
        alt=""
        src="./100_100.img"
      />
    </a>
    <h3>
      svg
    </h3>
    <svg
      height="100px"
      width="100px"
    >
      <circle
        cx="100"
        cy="100"
        fill="#ff0000"
        r="100"
      />
    </svg>
    <h3>
      video
    </h3>
    <video
      controls={true}
    />
    <video />
  </div>
  <div>
    <h1>
      Interactive content
    </h1>
    <h3>
      details / summary
    </h3>
    <details>
      <summary>
        More info
      </summary>
      <p>
        Additional information
      </p>
      <ul>
        <li>
          Point 1
        </li>
        <li>
          Point 2
        </li>
      </ul>
    </details>
  </div>
  <div>
    <h1>
      Grouping content
    </h1>
    <p>
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et m.
    </p>
    <h3>
      pre
    </h3>
    <pre>
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et me.
    </pre>
    <pre>
      <code>
        &lt;html&gt; &lt;head&gt; &lt;/head&gt; &lt;body&gt; &lt;div class="main"&gt; &lt;div&gt; &lt;/body&gt; &lt;/html&gt;
      </code>
    </pre>
    <h3>
      blockquote
    </h3>
    <blockquote>
      <p>
        Some sort of famous witty quote marked up with a &lt;blockquote&gt; and a child &lt;p&gt; element.
      </p>
    </blockquote>
    <blockquote>
      Even better philosophical quote marked up with just a &lt;blockquote&gt; element.
    </blockquote>
    <h3>
      ordered list
    </h3>
    <ol>
      <li>
        list item 1
      </li>
      <li>
        list item 1
        <ol>
          <li>
            list item 2
          </li>
          <li>
            list item 2
            <ol>
              <li>
                list item 3
              </li>
              <li>
                list item 3
              </li>
            </ol>
          </li>
          <li>
            list item 2
          </li>
          <li>
            list item 2
          </li>
        </ol>
      </li>
      <li>
        list item 1
      </li>
      <li>
        list item 1
      </li>
    </ol>
    <h3>
      unordered list
    </h3>
    <ul>
      <li>
        list item 1
      </li>
      <li>
        list item 1
        <ul>
          <li>
            list item 2
          </li>
          <li>
            list item 2
            <ul>
              <li>
                list item 3
              </li>
              <li>
                list item 3
              </li>
            </ul>
          </li>
          <li>
            list item 2
          </li>
          <li>
            list item 2
          </li>
        </ul>
      </li>
      <li>
        list item 1
      </li>
      <li>
        list item 1
      </li>
    </ul>
    <h3>
      description list
    </h3>
    <dl>
      <dt>
        Description name
      </dt>
      <dd>
        Description value
      </dd>
      <dt>
        Description name
      </dt>
      <dd>
        Description value
      </dd>
      <dd>
        Description value
      </dd>
      <dt>
        Description name
      </dt>
      <dt>
        Description name
      </dt>
      <dd>
        Description value
      </dd>
    </dl>
    <h3>
      figure
    </h3>
    <figure>
      <img
        alt=""
        src="./400_200.img"
      />
      <figcaption>
        Figcaption content
      </figcaption>
    </figure>
  </div>
  <div>
    <h1>
      Tabular data
    </h1>
    <table>
      <caption>
        Jimi Hendrix - albums
      </caption>
      <thead>
        <tr>
          <th>
            Album
          </th>
          <th>
            Year
          </th>
          <th>
            Price
          </th>
        </tr>
      </thead>
      <tfoot>
        <tr>
          <th>
            Album
          </th>
          <th>
            Year
          </th>
          <th>
            Price
          </th>
        </tr>
      </tfoot>
      <tbody>
        <tr>
          <td>
            Are You Experienced
          </td>
          <td>
            1967
          </td>
          <td>
            $10.00
          </td>
        </tr>
        <tr>
          <td>
            Axis: Bold as Love
          </td>
          <td>
            1967
          </td>
          <td>
            $12.00
          </td>
        </tr>
        <tr>
          <td>
            Electric Ladyland
          </td>
          <td>
            1968
          </td>
          <td>
            $10.00
          </td>
        </tr>
        <tr>
          <td>
            Band of Gypsys
          </td>
          <td>
            1970
          </td>
          <td>
            $12.00
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div>
    <h1>
      Forms
    </h1>
    <form>
      <fieldset>
        <legend>
          Inputs as descendents of labels (form legend). This doubles up as a long legend that can test word wrapping.
        </legend>
        <p>
          <label>
            Text input 
            <input
              defaultValue="default value that goes on and on without stopping or punctuation"
              type="text"
            />
          </label>
        </p>
        <p>
          <label>
            Email input 
            <input
              type="email"
            />
          </label>
        </p>
        <p>
          <label>
            Search input 
            <input
              type="search"
            />
          </label>
        </p>
        <p>
          <label>
            Tel input 
            <input
              type="tel"
            />
          </label>
        </p>
        <p>
          <label>
            URL input 
            <input
              placeholder="https://"
              type="url"
            />
          </label>
        </p>
        <p>
          <label>
            Password input 
            <input
              defaultValue="password"
              type="password"
            />
          </label>
        </p>
        <p>
          <label>
            File input 
            <input
              type="file"
            />
          </label>
        </p>
        <p>
          <label>
            Radio input 
            <input
              name="rad"
              type="radio"
            />
          </label>
        </p>
        <p>
          <label>
            Checkbox input 
            <input
              type="checkbox"
            />
          </label>
        </p>
        <p>
          <label>
            <input
              name="rad"
              type="radio"
            />
             Radio input
          </label>
        </p>
        <p>
          <label>
            <input
              type="checkbox"
            />
             Checkbox input
          </label>
        </p>
        <p>
          <label>
            Select field 
            <select>
              <option>
                Option 01
              </option>
              <option>
                Option 02
              </option>
            </select>
          </label>
        </p>
        <p>
          <label>
            Textarea 
            <textarea
              cols="30"
              defaultValue="Textarea text"
              rows="5"
            />
          </label>
        </p>
      </fieldset>
      <fieldset>
        <legend>
          Inputs as siblings of labels
        </legend>
        <p>
          <label
            htmlFor="ic"
          >
            Color input
          </label>
           
          <input
            defaultValue="#000000"
            id="ic"
            type="color"
          />
        </p>
        <p>
          <label
            htmlFor="in"
          >
            Number input
          </label>
           
          <input
            defaultValue="5"
            id="in"
            max="10"
            min="0"
            type="number"
          />
        </p>
        <p>
          <label
            htmlFor="ir"
          >
            Range input
          </label>
           
          <input
            defaultValue="10"
            id="ir"
            type="range"
          />
        </p>
        <p>
          <label
            htmlFor="idd"
          >
            Date input
          </label>
           
          <input
            defaultValue="1970-01-01"
            id="idd"
            type="date"
          />
        </p>
        <p>
          <label
            htmlFor="idm"
          >
            Month input
          </label>
           
          <input
            defaultValue="1970-01"
            id="idm"
            type="month"
          />
        </p>
        <p>
          <label
            htmlFor="idw"
          >
            Week input
          </label>
           
          <input
            defaultValue="1970-W01"
            id="idw"
            type="week"
          />
        </p>
        <p>
          <label
            htmlFor="idt"
          >
            Datetime input
          </label>
           
          <input
            defaultValue="1970-01-01T00:00:00Z"
            id="idt"
            type="datetime"
          />
        </p>
        <p>
          <label
            htmlFor="idtl"
          >
            Datetime-local input
          </label>
           
          <input
            defaultValue="1970-01-01T00:00"
            id="idtl"
            type="datetime-local"
          />
        </p>
        <p>
          <label
            htmlFor="irb"
          >
            Radio input
          </label>
           
          <input
            id="irb"
            name="rad"
            type="radio"
          />
        </p>
        <p>
          <label
            htmlFor="icb"
          >
            Checkbox input
          </label>
           
          <input
            id="icb"
            type="checkbox"
          />
        </p>
        <p>
          <input
            id="irb2"
            name="rad"
            type="radio"
          />
           
          <label
            htmlFor="irb2"
          >
            Radio input
          </label>
        </p>
        <p>
          <input
            id="icb2"
            type="checkbox"
          />
           
          <label
            htmlFor="icb2"
          >
            Checkbox input
          </label>
        </p>
        <p>
          <label
            htmlFor="s"
          >
            Select field
          </label>
           
          <select
            id="s"
          >
            <option>
              Option 01
            </option>
            <option>
              Option 02
            </option>
          </select>
        </p>
        <p>
          <label
            htmlFor="t"
          >
            Textarea
          </label>
           
          <textarea
            cols="30"
            defaultValue="Textarea text"
            id="t"
            rows="5"
          />
        </p>
      </fieldset>
      <fieldset>
        <legend>
          Clickable inputs and buttons
        </legend>
        <p>
          <input
            alt="Image (input)"
            src="./90_24.img"
            type="image"
          />
        </p>
        <p>
          <input
            defaultValue="Reset (input)"
            type="reset"
          />
        </p>
        <p>
          <input
            defaultValue="Button (input)"
            type="button"
          />
        </p>
        <p>
          <input
            defaultValue="Submit (input)"
            type="submit"
          />
        </p>
        <p>
          <input
            defaultValue="Disabled (input)"
            disabled={true}
            type="submit"
          />
        </p>
        <p>
          <button
            type="reset"
          >
            Reset (button)
          </button>
        </p>
        <p>
          <button
            type="button"
          >
            Button (button)
          </button>
        </p>
        <p>
          <button
            type="submit"
          >
            Submit (button)
          </button>
        </p>
        <p>
          <button
            disabled={true}
            type="submit"
          >
            Disabled (button)
          </button>
        </p>
      </fieldset>
      <fieldset
        id="boxsize"
      >
        <legend>
          box-sizing tests
        </legend>
        <div>
          <input
            defaultValue="text"
            type="text"
          />
        </div>
        <div>
          <input
            defaultValue="email"
            type="email"
          />
        </div>
        <div>
          <input
            defaultValue="search"
            type="search"
          />
        </div>
        <div>
          <input
            defaultValue="https://example.com"
            type="url"
          />
        </div>
        <div>
          <input
            defaultValue="password"
            type="password"
          />
        </div>
        <div>
          <input
            defaultValue="#000000"
            type="color"
          />
        </div>
        <div>
          <input
            defaultValue="5"
            type="number"
          />
        </div>
        <div>
          <input
            defaultValue="10"
            type="range"
          />
        </div>
        <div>
          <input
            defaultValue="1970-01-01"
            type="date"
          />
        </div>
        <div>
          <input
            defaultValue="1970-01"
            type="month"
          />
        </div>
        <div>
          <input
            defaultValue="1970-W01"
            type="week"
          />
        </div>
        <div>
          <input
            defaultValue="1970-01-01T00:00:00Z"
            type="datetime"
          />
        </div>
        <div>
          <input
            defaultValue="1970-01-01T00:00"
            type="datetime-local"
          />
        </div>
        <div>
          <input
            type="radio"
          />
        </div>
        <div>
          <input
            type="checkbox"
          />
        </div>
        <div>
          <select>
            <option>
              Option 01
            </option>
            <option>
              Option 02
            </option>
          </select>
        </div>
        <div>
          <textarea
            cols="30"
            defaultValue="Textarea text"
            rows="5"
          />
        </div>
        <div>
          <input
            alt="Image (input)"
            src="./90_24.img"
            type="image"
          />
        </div>
        <div>
          <input
            defaultValue="Reset (input)"
            type="reset"
          />
        </div>
        <div>
          <input
            defaultValue="Button (input)"
            type="button"
          />
        </div>
        <div>
          <input
            defaultValue="Submit (input)"
            type="submit"
          />
        </div>
        <div>
          <button
            type="reset"
          >
            Reset (button)
          </button>
        </div>
        <div>
          <button
            type="button"
          >
            Button (button)
          </button>
        </div>
        <div>
          <button
            type="submit"
          >
            Submit (button)
          </button>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;
